@@ -1,3 +1,5 @@
+- Issue #11798: TestSuite now drops references to own tests after execution.
+
 - Issue #14971: unittest test discovery no longer gets confused when a function
   has a different __name__ than its name in the TestCase class dictionary.
 
